--- a/sub/app/views/asks/invite_to_answer_drop.js.erb
+++ b/sub/app/views/asks/invite_to_answer_drop.js.erb
@@ -1,9 +1,9 @@
-$('#shared_span_count').html('(<%=@ask.to_user_ids.count%>)');
-$('#ask_invite_<%=params[:i_id]%> .close').remove();
+jQuery('#shared_span_count').html('(<%=@ask.to_user_ids.count%>)');
+jQuery('#ask_invite_<%=params[:i_id]%> .close').remove();
 <%
 item=AskInvite.where(:_id=>params[:i_id]).first
 if(item.blank? or item.count==0) %>
-  $('#ask_invite_<%=params[:i_id]%>').remove();
+  jQuery('#ask_invite_<%=params[:i_id]%>').remove();
 <% elsif(item) %>
-  $("#ask_invite_<%=params[:i_id]%> .count").text('<%= item.count %>');
+  jQuery("#ask_invite_<%=params[:i_id]%> .count").text('<%= item.count %>');
 <% end%>
