--- a/sub/app/views/cpanel/stats/kpi.html.erb
+++ b/sub/app/views/cpanel/stats/kpi.html.erb
@@ -70,8 +70,8 @@
 <%end %>
 
 <% content_for :butt2 do %>
-  $(function() {
-  $( "#datepicker" ).datepicker({
+  jQuery(function() {
+  jQuery( "#datepicker" ).datepicker({
   dateFormat:'yy-mm-dd'
   });
   });
