--- a/sub/app/views/cpanel/users/index.html.erb
+++ b/sub/app/views/cpanel/users/index.html.erb
@@ -61,7 +61,7 @@
   <script type="text/javascript">
     window.onload=init_link;
     function init_link(){
-      $("#export_xls_link").attr("href",window.location.href.replace("/cpanel/users","/cpanel/users.xls"));
+      jQuery("#export_xls_link").attr("href",window.location.href.replace("/cpanel/users","/cpanel/users.xls"));
     }
   </script>
 <%else%>
