--- a/sub/app/views/asks/share.html.erb
+++ b/sub/app/views/asks/share.html.erb
@@ -1,5 +1,5 @@
 <div id="share_ask">
-  <header>分享问题 <a class="close" onclick="$.facebox.close(); return false;"></a></header>
+  <header>分享问题 <a class="close" onclick="jQuery.facebox.close(); return false;"></a></header>
   <section>
     <div class="tabNav">
       <ul>
@@ -15,10 +15,10 @@
         <dl class="shareEmailTab clearfix">
           <dt><label>收件人：</label></dt>
           <dd><input type="text" name="to" placeholder="如：user@163.com" required="required" type="email" /></dd>
-          <dt><label>psvr_will_protect_ya：</label></dt>
+          <dt><label>$：</label></dt>
           <dd><input type="text" style="width:340px;" required="required" name="subject" value="<%= current_user.name %>向你推荐问题" /></dd>
           <dt><label>正文：</label></dt>
-          <dd style="height:auto"><textarea style="width:324px;height:60px;" required="required" onclick="$(this).height(150);" name="body"><%= current_user.name %>说：向你推荐这个问题《<%=link_to @ask.title,ask_url(@ask.id)%>》访问地址：<a href="<%= ask_url(@ask.id) %>" target="_blank"><%= ask_url(@ask.id) %></a></textarea></dd>
+          <dd style="height:auto"><textarea style="width:324px;height:60px;" required="required" onclick="jQuery(this).height(150);" name="body"><%= current_user.name %>说：向你推荐这个问题《<%=link_to @ask.title,ask_url(@ask.id)%>》访问地址：<a href="<%= ask_url(@ask.id) %>" target="_blank"><%= ask_url(@ask.id) %></a></textarea></dd>
         </dl>
       </div>
     </form>
@@ -39,21 +39,21 @@
   </footer>
 </div>
 <script type="text/javascript" charset="utf-8">
-  $("#share_ask .tabNav a").click(function(){
-    a = $(this);
-    $(".share_panel").hide();
-    $(".btn_share").hide();
-    $("#share_panel_"+a.attr("show")).show().find("input,textarea").first().focus().select();
-    $("#btn_share_"+a.attr("show")).show();
-    $("#share_ask .tabNav li").removeClass("current");
-    $(this).parent().addClass("current");
+  jQuery("#share_ask .tabNav a").click(function(){
+    a = jQuery(this);
+    jQuery(".share_panel").hide();
+    jQuery(".btn_share").hide();
+    jQuery("#share_panel_"+a.attr("show")).show().find("input,textarea").first().focus().select();
+    jQuery("#btn_share_"+a.attr("show")).show();
+    jQuery("#share_ask .tabNav li").removeClass("current");
+    jQuery(this).parent().addClass("current");
     return false;
   });
-  $("#btn_share_email", $("#facebox")).unbind("click").click(function(){
-    if($(".shareEmailTab input[name='to']").val()!="" && $(".shareEmailTab input[name='subject']").val()!="" && $(".shareEmailTab textarea[name='body']").val()!=""){
+  jQuery("#btn_share_email", jQuery("#facebox")).unbind("click").click(function(){
+    if(jQuery(".shareEmailTab input[name='to']").val()!="" && jQuery(".shareEmailTab input[name='subject']").val()!="" && jQuery(".shareEmailTab textarea[name='body']").val()!=""){
       if (/^[a-z0-9][_a-z0-9\-]*([\.][_a-z0-9\-]+)*@([a-z0-9\-_]+[\.])+(?:cc|com|edu|gov|int|net|org|biz|info|pro|name|coop|al|dz|af|ar|ae|aw|om|az|eg|et|ie|ee|ad|ao|ai|ag|at|au|mo|bb|pg|bs|pk|py|ps|bh|pa|br|by|bm|bg|mp|bj|be|is|pr|ba|pl|bo|bz|bw|bt|bf|bi|bv|kp|gq|dk|de|tl|tp|tg|dm|do|ru|ec|er|fr|fo|pf|gf|tf|va|ph|fj|fi|cv|fk|gm|cg|cd|co|cr|gg|gd|gl|ge|cu|gp|gu|gy|kz|ht|kr|nl|an|hm|hn|ki|dj|kg|gn|gw|ca|gh|ga|kh|cz|zw|cm|qa|ky|km|ci|kw|cc|hr|ke|ck|lv|ls|la|lb|lt|lr|ly|li|re|lu|rw|ro|mg|im|mv|mt|mw|my|ml|mk|mh|mq|yt|mu|mr|us|um|as|vi|mn|ms|bd|pe|fm|mm|md|ma|mc|mz|mx|nr|np|ni|ne|ng|nu|no|nf|na|za|aq|gs|eu|pw|pn|pt|jp|se|ch|sv|ws|yu|sl|sn|cy|sc|sa|cx|st|sh|kn|lc|sm|pm|vc|lk|sk|si|sj|sz|sd|sr|sb|so|tj|tw|th|tz|to|tc|tt|tn|tv|tr|tm|tk|wf|vu|gt|ve|bn|ug|ua|uy|uz|es|eh|gr|hk|sg|nc|nz|hu|sy|jm|am|ac|ye|iq|ir|il|it|in|id|uk|vg|io|jo|vn|zm|je|td|gi|cl|cf|cn)$/
-      .test($(".shareEmailTab input[name='to']").val())){
-        $(".simple_form", $("#facebox"))[0].submit();
+      .test(jQuery(".shareEmailTab input[name='to']").val())){
+        jQuery(".simple_form", jQuery("#facebox"))[0].submit();
       }else{
         return false;
       }
@@ -61,8 +61,8 @@
       return false;
     }
   });
-  $("#btn_share_url", $("#facebox")).unbind("click").click(function(){
-    var txtObj = $("#share_panel_url textarea", $("#facebox"));
+  jQuery("#btn_share_url", jQuery("#facebox")).unbind("click").click(function(){
+    var txtObj = jQuery("#share_panel_url textarea", jQuery("#facebox"));
     if (window.clipboardData){
       window.clipboardData.setData('text', txtObj.val());
     } else {
@@ -71,8 +71,8 @@
     }
   });
 <% if !params[:type].blank? %>
-    $("#share_ask .tabNav a[show*=<%= params[:type] %>]").click();
+    jQuery("#share_ask .tabNav a[show*=<%= params[:type] %>]").click();
 <% else %>
-    $("#share_ask .tabNav a").first().click();
+    jQuery("#share_ask .tabNav a").first().click();
 <% end %>
 </script>
