--- a/sub/app/views/asks/share.js.erb
+++ b/sub/app/views/asks/share.js.erb
@@ -1,6 +1,6 @@
 <% if @success %>
   App.notice('<%= @msg %>');
-  $.facebox.close();
+  jQuery.facebox.close();
 <% else %>
   alert('<%= @msg %>');
 <% end %>
