--- a/sub/app/views/asks/update_topic.js.erb
+++ b/sub/app/views/asks/update_topic.js.erb
@@ -1,6 +1,6 @@
 <% if @success %>
   Asks.addTopic("<%= @name %>");
-  $("#searchTopic").val("").focus();
+  jQuery("#searchTopic").val("").focus();
 <% else %>
 <% end %>
 App.loading(false);
