--- a/sub/app/views/cpanel/notices/_form.html.erb
+++ b/sub/app/views/cpanel/notices/_form.html.erb
@@ -28,7 +28,7 @@
           <%= label_tag(:open_notice, "关闭公告") %>
         </div>
         <div class="actions">
-          <input type="button" value="预览" style="width:120px;cursor:pointer;margin-left:200px;" onclick="$('#notice_body').html(editor.html())">
+          <input type="button" value="预览" style="width:120px;cursor:pointer;margin-left:200px;" onclick="jQuery('#notice_body').html(editor.html())">
           <input type="submit" value="提交" style="width:120px;cursor:pointer;margin-left:80px;">
         </div>
       </div>
@@ -52,7 +52,7 @@
           <%= label_tag(:open_notice, "关闭公告") %>
         </div>
         <div class="actions">
-          <input type="button" value="预览" style="width:120px;cursor:pointer;margin-left:200px;" onclick="$('#notice_body').html(editor.html())">
+          <input type="button" value="预览" style="width:120px;cursor:pointer;margin-left:200px;" onclick="jQuery('#notice_body').html(editor.html())">
           <input type="submit" value="提交" style="width:120px;cursor:pointer;margin-left:80px;">
         </div>
       </div>
@@ -60,14 +60,14 @@
   <%end%>
 </div>
 <% content_for :butt2 do %>
-  $(function() {
-  $("#datepicker_from").datepicker({
+  jQuery(function() {
+  jQuery("#datepicker_from").datepicker({
   dateFormat:'yy-mm-dd'
   });
-  $( "#datepicker_to" ).datepicker({
+  jQuery( "#datepicker_to" ).datepicker({
   dateFormat:'yy-mm-dd'
   });
-  $('#time_from').timePicker();
-  $('#time_to').timePicker();
+  jQuery('#time_from').timePicker();
+  jQuery('#time_to').timePicker();
   });
 <% end %>
