--- a/sub/app/views/cpanel/report_spams/_search_form.html.erb
+++ b/sub/app/views/cpanel/report_spams/_search_form.html.erb
@@ -27,32 +27,32 @@
     </div>
   <% end %>
   <% content_for :butt2 do %>
-    $(function() {
-    $("#datepicker_from").datepicker({
+    jQuery(function() {
+    jQuery("#datepicker_from").datepicker({
     dateFormat:'yy-mm-dd'
     });
-    $( "#datepicker_to" ).datepicker({
+    jQuery( "#datepicker_to" ).datepicker({
     dateFormat:'yy-mm-dd'
     });
-    $('#time_from').timePicker();
-    $('#time_to').timePicker();
-    $("#handle_datepicker_from").datepicker({
+    jQuery('#time_from').timePicker();
+    jQuery('#time_to').timePicker();
+    jQuery("#handle_datepicker_from").datepicker({
     dateFormat:'yy-mm-dd'
     });
-    $( "#handle_datepicker_to" ).datepicker({
+    jQuery( "#handle_datepicker_to" ).datepicker({
     dateFormat:'yy-mm-dd'
     });
-    $('#handle_time_from').timePicker();
-    $('#handle_time_to').timePicker();
+    jQuery('#handle_time_from').timePicker();
+    jQuery('#handle_time_to').timePicker();
     });
   <% end %>
 </div>
 <script type="text/javascript">
   function check_handler(){
-    if($("#handler_name").val()!="" || ($("#handle_datepicker_from").val().match(/^\d{4}[\/\-](0?[1-9]|1[012])[\/\-](0?[1-9]|[12][0-9]|3[01])$/) && $("#handle_time_from").val().match(/^([0-1]?[0-9]|2[0-3]):([0-5]?[0-9])$/)) || ($("#handle_datepicker_to").val().match(/^\d{4}[\/\-](0?[1-9]|1[012])[\/\-](0?[1-9]|[12][0-9]|3[01])$/) && $("#handle_time_to").val().match(/^([0-1]?[0-9]|2[0-3]):([0-5]?[0-9])$/))){
-      $("#handled").val(2);
+    if(jQuery("#handler_name").val()!="" || (jQuery("#handle_datepicker_from").val().match(/^\d{4}[\/\-](0?[1-9]|1[012])[\/\-](0?[1-9]|[12][0-9]|3[01])$/) && jQuery("#handle_time_from").val().match(/^([0-1]?[0-9]|2[0-3]):([0-5]?[0-9])$/)) || (jQuery("#handle_datepicker_to").val().match(/^\d{4}[\/\-](0?[1-9]|1[012])[\/\-](0?[1-9]|[12][0-9]|3[01])$/) && jQuery("#handle_time_to").val().match(/^([0-1]?[0-9]|2[0-3]):([0-5]?[0-9])$/))){
+      jQuery("#handled").val(2);
     }else{
-      $("#handled").val(0);
+      jQuery("#handled").val(0);
     }
   }
 </script>
