--- a/sub/app/views/home/mobile.html.erb
+++ b/sub/app/views/home/mobile.html.erb
@@ -60,9 +60,9 @@
             <input placeholder="搜索问答、话题疑问" id="searchInput">
           </div>
           <%= content_for :butt2 do %>
-            Asks.completeAll($("#searchInput"));
+            Asks.completeAll(jQuery("#searchInput"));
 
-            $(' .pager a.disabled').click(function(){
+            jQuery(' .pager a.disabled').click(function(){
             return false;
             });
           <% end %>
@@ -142,7 +142,7 @@
         <%= auth_token %>
         <header>
           创建新问题
-          <a class="close"  onclick="$.facebox.close(); return false;"></a>
+          <a class="close"  onclick="jQuery.facebox.close(); return false;"></a>
         </header>
         <section>
           <div class="editorBox mt10 clearfix">
