--- a/sub/app/views/users/show__cnu.html.erb
+++ b/sub/app/views/users/show__cnu.html.erb
@@ -3,20 +3,20 @@
   <script type="text/javascript">
 		function follow(el, id){
       App.loading();
-			$(el).attr("onclick", "return false;");
-			$.get("/users/"+id+"/follow",{}, function(res){
+			jQuery(el).attr("onclick", "return false;");
+			jQuery.get("/users/"+id+"/follow",{}, function(res){
         App.loading(false);
-        $(el).replaceWith('<a href="#" style="width:80px;" class="gray_button" onclick="return unfollow(this, \'<%= @user.slug %>\');">取消关注</a>');
+        jQuery(el).replaceWith('<a href="#" style="width:80px;" class="gray_button" onclick="return unfollow(this, \'<%= @user.slug %>\');">取消关注</a>');
 	    });
       return false;
     }
 		
 		function unfollow(el, id){
       App.loading();
-			$(el).attr("onclick", "return false;");
-			$.get("/users/"+id+"/unfollow",{}, function(res){
+			jQuery(el).attr("onclick", "return false;");
+			jQuery.get("/users/"+id+"/unfollow",{}, function(res){
         App.loading(false);
-        $(el).replaceWith('<a href="#" style="width:80px;" class="gray_button bBtn bBtnFocus" onclick="return follow(this, \'<%= @user.slug %>\');">关注</a>');
+        jQuery(el).replaceWith('<a href="#" style="width:80px;" class="gray_button bBtn bBtnFocus" onclick="return follow(this, \'<%= @user.slug %>\');">关注</a>');
 	    });
       return false;
     }
