--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -44,8 +44,9 @@
   <div id="append_parent"></div><div id="ajaxwaitid"></div>
   <div id="hd">
     <div class="wp" style="padding:0">
-      <div class="hdc cl psvr_wtf_<%= user_signed_in? ? 'logout' : 'login' %>div" style="position:absolute;top:25px;margin-left:604px">
+      <div class="hdc cl psvr_wtf_<%= user_signed_in? ? 'logout' : 'login' %>div" style="position:absolute;top:25px;margin-left:<%= user_signed_in? ? 579 : 604%>px">
 
+        <% if !user_signed_in? %>
         <script src="/simple/static/js/logging.js?tFF" type="text/javascript"></script>
         <form method="post" autocomplete="off" id="lsform" action="/simple/member.php?mod=logging&amp;action=login&amp;loginsubmit=yes&amp;infloat=yes&amp;lssubmit=yes" onsubmit="return lsSubmit();">
           <div class="fastlg cl">
@@ -79,6 +80,27 @@
             </div>
           </div>
         </form>
+      <%else%>
+        <div id="um">
+          <div class="avt y"><a href="/simple/home.php?mod=space&amp;uid=1"><img src="<%=UCenter.getdef('UC_API')%>/avatar.php?uid=1&size=small" /></a></div>
+          <p>
+          <strong class="vwmy"><a href="/simple/home.php?mod=space&amp;uid=1" target="_blank" title="访问我的空间">psvr</a></strong>
+          <span id="loginstatus">
+            <a id="loginstatusid" href="/simple/member.php?mod=switchstatus" title="切换在线状态" onclick="ajaxget(this.href, 'loginstatus');return false;" class="xi2"></a>
+          </span>
+          <span class="pipe">|</span><a href="/simple/home.php?mod=spacecp">设置</a>
+          <span class="pipe">|</span><a href="/simple/home.php?mod=space&amp;do=pm" id="pm_ntc">消息</a>
+          <span class="pipe">|</span><a href="/simple/home.php?mod=space&amp;do=notice" id="myprompt">提醒</a><span id="myprompt_check"></span>
+          <span class="pipe">|</span><a href="/simple/portal.php?mod=portalcp">模块管理</a>
+          <span class="pipe">|</span><a href="/simple/admin.php" target="_blank">管理中心</a>
+          <span class="pipe">|</span><a href="/simple/member.php?mod=logging&amp;action=logout&amp;formhash=712fc880">退出</a>
+          </p>
+          <p>
+          <a href="/simple/home.php?mod=spacecp&amp;ac=credit&amp;showcredit=1" id="extcreditmenu" onmouseover="delayShow(this, showCreditmenu);" class="showmenu">积分: 326</a>
+          <span class="pipe">|</span>用户组: <a href="/simple/home.php?mod=spacecp&amp;ac=usergroup" id="g_upmine" class="xi2" onmouseover="delayShow(this, showUpgradeinfo)">管理员</a>
+          </p>
+        </div>
+      <%end%>
       </div>
       <div class="cl" id="mu"></div>
       <div class="cl psvr_wtf_scbar" id="scbar" style="width:<%= @is_ie6 ? '951' : '936' %>px;<%= @is_ie6 ? 'margin-left:5px' : '' %>">
@@ -181,22 +203,19 @@
 
 <!--header end-->
 
-<% if !notice.blank? %>
-  <p class="flash notice"><%=raw notice %></p>
+<% if !alert.blank? %>
   <%= content_for :butt2 do %>
-      jQuery("#sdk_flashes .notice").fadeOut().fadeIn();
+    showDialog(<%=raw alert.to_json %>,'alert',null,null,0,null,null,null,null,3,null);
   <% end %>
 <% end %>
-<% if !alert.blank? %>
-  <p class="flash alert"><%=raw alert %></p>
+<% if !notice.blank? %>
   <%= content_for :butt2 do %>
-      jQuery("#sdk_flashes .alert").fadeOut('fast').fadeIn('fast').fadeOut('fast').fadeIn('fast');
+    showDialog(<%=raw notice.to_json %>,'notice',null,null,0,null,null,null,null,3,null);
   <% end %>
 <% end %>
 <% if !flash[:insuf_info].blank? %>
-  <p class="flash warning"><%=raw flash[:insuf_info] %></p>
   <%= content_for :butt2 do %>
-      jQuery("#sdk_flashes .warning").fadeOut('fast').fadeIn('fast').fadeOut('fast').fadeIn('fast');
+    showDialog(<%=raw flash[:insuf_info].to_json %>,'info',null,null,0,null,null,null,null,3,null);
   <% end %>
 <% end %>
 
